# cpp-design-patterns

./: .gitignore
Bridge/BridgeImplementation/: CMakeLists.txt  main.cpp
Bridge/PIMPL/: CMakeLists.txt  Person.cpp
Builder/: README.md
Builder/Builder/BuilderFacade/: BuilderFacade.vcxproj.filters  Person.h  PersonBuilderBase.h
Composition/ArrayBackedProperties/: main.cpp
Decorators/Dynamic/: main.cpp
Decorators/FunctionDecorator/: main.cpp
Factory/: README.md
Factory/AbstractFactory/: main.cpp
Factory/PointerExample/: main.cpp
ProtoType/ProtoType/: CMakeLists.txt
ProtoType/PrototypeSerialization/: CMakeLists.txt
SOLID/SOLIDDesignPrinciples/LiskovSubstitutionPrinciple/: LiskovSubstitutionPrinciple.vcxproj
Section 10 Decorators/Dynamic/: CMakeLists.txt
Section 10 Decorators/FunctionDecorator/: CMakeLists.txt
Section 10 Decorators/Static/: CMakeLists.txt  main.cpp
Section 12 Flyweight/HandmadeFlyweight/: CMakeLists.txt  main.cpp
Section 2 SOLID/SOLIDDesignPrinciples/DependencyInversionPrinciple/: DependencyInversionPrinciple.vcxproj
Section 2 SOLID/SOLIDDesignPrinciples/InterfaceSegregationPrinciple/: main.cpp
Section 2 SOLID/SOLIDDesignPrinciples/OpenClosePrinciple/: OpenClosePrinciple.vcxproj
Section 2/SOLIDDesignPrinciples/: SOLIDDesignPrinciples.sln
Section 2/SOLIDDesignPrinciples/DependencyInversionPrinciple/: main.cpp
Section 2/SOLIDDesignPrinciples/InterfaceSegregationPrinciple/: InterfaceSegregationPrinciple.vcxproj
Section 2/SOLIDDesignPrinciples/LiskovSubstitutionPrinciple/: main.cpp
Section 2/SOLIDDesignPrinciples/OpenClosePrinciple/: main.cpp
Section 2/SOLIDDesignPrinciples/SOLIDDesignPrinciples/: SOLIDDesignPrinciples.vcxproj  journal.txt  main.cpp
Section 3 Builder/Builder/BuilderFacade/: BuilderFacade.vcxproj  Person.cpp
Section 3/Builder/: Builder.sln
Section 4 Factory/AbstractFactory/: CMakeLists.txt  DrinkFactory.h  HotDrink.h  HotDrinkFactory.h
Section 4 Factory/PointerExample/: CMakeLists.txt
Section 5 ProtoType/: CMakeLists.txt
Section 5 ProtoType/ProtoType/: main.cpp
Section 5 ProtoType/PrototypeFactory/: CMakeLists.txt  main.cpp
Section 5 ProtoType/PrototypeSerialization/: main.cpp
Section 6 Singleton/DIContainer/: CMakeLists.txt  main.cpp
Section 6 Singleton/SingletonImplementation/: CMakeLists.txt  capitals.txt
Section 7 Adapter/VectorRasterDemoAdapter/: CMakeLists.txt
Section 8 Bridge/PIMPL/: Person.h
Section 9 Composition/ArrayBackedProperties/: CMakeLists.txt
Section 9 Composition/GeometricShapes/: CMakeLists.txt  main.cpp
Section 9 Composition/Neuralnetwork/: CMakeLists.txt  main.cpp
Singleton/SingletonImplementation/: main.cpp
(+9 files in other folders)
